# GPOsc

./: CMakeLists.txt
include/: GPContinuousOsc.h  GPModel.h
src/: GPContinuousOsc.cpp  GPModel.cpp
test/: test.cpp
